syntax = "proto3";

package api.v1.seat;

service Service {
    rpc GetSeats(GetSeatsRequest) returns (GetSeatsResponse);
    rpc GetSeatsByRange(GetSeatsByRangeRequest) returns (GetSeatsResponse);
    rpc CreateSeats(CreateSeatsRequest) returns (SeatListResponse);
    rpc UpdateSeats(UpdateSeatsRequest) returns (SeatListResponse);
    rpc DeleteSeats(DeleteSeatsRequest) returns (SeatListResponse);
}

// --- Shared response types ---

message BusResponse {
    int32 bus_id = 1;
    optional string name = 2;
    string license_plate = 3;
}

message SeatResponse {
    int32 seat_id = 1;
    int32 bus_id = 2;
    int32 price = 3;
    string name = 4;
    optional BusResponse bus = 5;
}

message GetSeatsResponse {
    string message = 1;
    int32 size = 2;
    int32 offset = 3;
    int64 total = 4;
    repeated SeatResponse data = 5;
}

message SeatListResponse {
    string message = 1;
    repeated SeatResponse data = 2;
}

// --- Request types ---

message GetSeatsRequest {
    int32 offset = 1;
    int32 size = 2;
}

message GetSeatsByRangeRequest {
    repeated int32 seat_ids = 1;
    repeated string names = 2;
}

message CreateSeatInput {
    int32 bus_id = 1;
    int32 price = 2;
    string name = 3;
}

message CreateSeatsRequest {
    repeated CreateSeatInput seats = 1;
}

message UpdateSeatInput {
    int32 seat_id = 1;
    int32 bus_id = 2;
    int32 price = 3;
    string name = 4;
}

message UpdateSeatsRequest {
    repeated UpdateSeatInput seats = 1;
}

message DeleteSeatsRequest {
    repeated int32 seat_ids = 1;
}
